--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,6 @@
 {
         "folder_id": "aaaaaaaaaaaaaaaaa",
-        "service_account_key_file": "aa/aaa/aaa",
+        "service_account_key_file": "key.json",
         "disk_type": "network-hdd",
         "image_name": "unique name",
         "source_image_id": "ubuntuid"
