--- a/packer/app.json
+++ b/packer/app.json
@@ -16,19 +16,8 @@
     ],
     "provisioners": [
         {
-        "type": "shell",
-        "script": "scripts/install_ruby.sh",
-        "execute_command": "sudo {{.Path}}"
-        },
-        {
-        "type": "file",
-        "source": "files/puma-reddit.service",
-        "destination": "puma-reddit.service"
-        },
-        {
-        "type": "shell",
-        "script": "files/install_git.sh",
-        "execute_command": "sudo {{.Path}}"
+        "type": "ansible",
+        "playbook_file": "ansible/packer_app.yml"
         }
     ]
 }
