--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -1,17 +1,20 @@
 - name: Deploying application
   hosts: app
+  vars:
+    deploy_user: appuser
+
   tasks:
   - name: Fetch the latest version of application code
     changed_when: true
     git:
       repo: 'https://github.com/express42/reddit.git'
-      dest: /home/ubuntu/reddit
+      dest: "/home/{{ deploy_user }}/reddit"
       version: monolith
 
   - name: Bundle install
     bundler:
       state: present
-      chdir: /home/ubuntu/reddit
+      chdir: "/home/{{ deploy_user }}/reddit"
 
   - name: enable puma
     become: true
