--- a/ansible/playbooks/packer_app.yml
+++ b/ansible/playbooks/packer_app.yml
@@ -1,13 +1,21 @@
+---
 - name: Build application instance image
   hosts: all
   become: true
-  tasks:
-  - name: Installing ruby, rubygems and git packages
-    apt:
-      name: "{{ item }}"
-      update_cache: yes
-    with_items:
-      - ruby-full
-      - ruby-bundler
-      - build-essential
-      - git
+  roles:
+  - app
+
+### Previous solution
+# - name: Build application instance image
+#   hosts: all
+#   become: true
+#   tasks:
+#   - name: Installing ruby, rubygems and git packages
+#     apt:
+#       name: "{{ item }}"
+#       update_cache: yes
+#     with_items:
+#       - ruby-full
+#       - ruby-bundler
+#       - build-essential
+#       - git
